syntax = "proto3";

import "google/protobuf/timestamp.proto";

package proto;

option go_package = "github.com/raghavyuva/turbo-engine/internal/table/proto";

message TransactionLog {
  uint64 id = 1;
  bytes data = 2;
  google.protobuf.Timestamp timestamp = 3;
  ActionType action_type = 4;
}

enum ActionType {
  UNKNOWN = 0;
  WRITE = 1;
  DELETE = 2;
  PUT = 3;
  DELETE_RANGE = 4;
  INGEST = 5;
}